--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 	<h1>Hello world</h1>
     <p>this is a paragraph</p>
     <a href="about.html">about</a>
+    <ul>
+    <li>Harsh</li>
+    <li>Rohit</li>
+    <li>Prateek</li>
+    <li>Aviral</li>
+    <li>Abhishek</li>
+    </ul>
 </body>
 </html>
