--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<h1>Hello world</h1>
-    <p>this is a paragraph</p>
-    <a href="about.html">about</a>
-    <ul>
-    <li>Harsh</li>
-    <li>Rohit</li>
-    <li>Prateek</li>
-    <li>Aviral</li>
-    <li>Abhishek</li>
-    </ul>
+    <div class="banner-image"></div>
+    <nav>
+        <div class="container">
+            <a href="#" class="brand">SK</a>
+            <ul>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">Prices</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <section class="hero">
+        <div class="container">
+            <h2>
+                This soundted nonsense to Alice, so she said nothing, but set off at once toward the Red Queen.
+            </h2>
+            <blockquote>To her surprise, she lost sight of her in a moment, and found herself walking in at the front-door again.</blockquote>
+        </div>
+    </section>
 </body>
 </html>
